# my_shop

./: .gitignore  Dockerfile  __init__.py  docker-compose.yaml  pyproject.toml
authentication/: models.py  serializers.py  urls.py  utils.py  views.py
authentication/middleware/: jwt_auth_middleware.py
authentication/migrations/: 0006_refreshtoken.py  0007_revokedaccesstoken.py  0008_delete_revokedaccesstoken.py
authentication/services/: auth_service.py  jwt_service.py
cart/: middleware.py  models.py  permission.py  serializers.py  services.py  views.py
cart/migrations/: 0002_alter_cart_cart_id_alter_cart_user.py
core/: asgi.py  celery.py  settings.py  urls.py  utils.py  wsgi.py
goods/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
goods/migrations/: 0002_alter_product_options_and_more.py  0003_alter_product_category.py
my_shop/: pytest.ini
my_shop/authentication/: models.py
my_shop/cart/: middleware.py  models.py  permission.py  services.py  urls.py  views.py
my_shop/core/: settings.py  urls.py
my_shop/goods/: serializers.py
my_shop/orders/: models.py
orders/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_order_uuid.py
orders/templates/: order_email.html
src/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py
tests/test_authentication/: conftest.py  test_jwt_auth.py  test_jwt_auth_flow.py  test_models.py  test_serializers.py  (+3 more)
user_account/: admin.py  manager.py  mixins.py  models.py  serializers.py  urls.py  views.py
(+31 files in other folders)
